packages/web/src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

::-webkit-scrollbar {
  background: inherit;
  height: 14px;
  width: 8px;
}

::-webkit-scrollbar-thumb,
::-webkit-scrollbar-track {
  background-clip: padding-box;
  border-radius: 7px;
  border-style: solid;
  border-width: 2px;
}

::-webkit-scrollbar-track {
  border-width: initial;
}

::-webkit-scrollbar-thumb {
  background-color: #333033;
  border-color: transparent;
}

::-webkit-scrollbar-track {
  background-color: rgba(0, 0, 0, 0);
  border-color: transparent;
}

code[class*='language-'],
pre[class*='language-'] {
  white-space: normal !important;
  word-break: break-word !important;
}

